fix: chat width overflow

--- a/front/copmed-extension/src/modules/Chat/chat.css
+++ b/front/copmed-extension/src/modules/Chat/chat.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     height: 480px;
-    width: 320px;
     margin: 0 auto;
     background-color: #f3f4f6;
     padding: 0.75rem;
